# WGSL-Shader-Studio

./: .gitattributes  .gitignore  CATASTROPHIC_DESTRUCTION_ANALYSIS.md  COMPLETE_BACKEND_INTEGRATION_STATUS.md  COMPLETE_DESTRUCTION_TRUTH.md  COMPLETE_FEATURE_AUDIT.md  COMPLETE_INTEGRATION_GUIDE.md  COMPREHENSIVE_FEATURE_VERIFICATION.md  COMPREHENSIVE_STATUS_REPORT.md  CURRENT_STATE.md  CURRENT_STATUS_REPORT.md  Cargo.toml  Cargo_patched.toml  DISCIPLINARY_ENFORCEMENT_SYSTEM.ps1  DISCIPLINE_SCRIPT.md  DRASTIC_MEASURES_TO_PREVENT_PSYCHOTIC_LOOPS.md  ENFORCEMENT_SCRIPT.md  FEATURES_DOCUMENTATION.md  FEATURES_IMPLEMENTED.md  GPU_FIX_COMPLETE.md  HONEST_RECOVERY_PLAN.md  ISSUES_FIXED.md  MISSING_REFERENCE_PATTERNS_INTEGRATION_PLAN.md  PERFECT_COMPREHENSIVE_ANALYSIS.md  PHASE_3_STATUS_REPORT.md  PROGRESS_UPDATE.md  PROJECT_STATUS.md  PSYCHOTIC_LOOP_ANALYSIS.md  PSYCHOTIC_LOOP_DOCUMENT.md  PSYCHOTIC_LOOP_DOCUMENTATION.md  PSYCHOTIC_LOOP_EMERGENCY_RECORD.md  PSYCHOTIC_LOOP_VIOLATION_REPORT.md  README.md  REAL_SYSTEMATIC_ANALYSIS.md  STRICT_PROTOCOL.md  SURGICAL_ANALYSIS_REPORT.md  SURGICAL_DISCIPLINE_SCRIPT.md  TECHNICAL_ACCURACY_VERIFICATION_REPORT.md  TECHNOLOGY_STACK.md  UI_AUDIT_REPORT.md  (+145 more)
.trae/documents/: COMPLETE_27_BACKEND_FEATURES_ANALYSIS.md  DISCIPLINARY_RULES.md  FEATURE_STATUS.md  PSYCHOTIC_LOOP_DOCUMENT.md  PSYCHOTIC_LOOP_DOCUMENTATION.md  WGSL_Shader_Studio_Complete_Feature_Implementation_PRD.md  WGSL_Shader_Studio_Technical_Architecture_Complete.md  comprehensive_work_documentation.md  psychotic_delusion_document.md
.trae/rules/: ALWAYS_USE_RELEASE_MODE.md  EMERGENCY_NO_TAMPERING_RULES.md  FAST_BUILD_RULES.md  MANDATORY_UI_VERIFICATION_PROTOCOL.md  project_rules.md
assets/shaders/: compute_particle_simulation.wgsl  compute_shared_memory.wgsl  compute_texture_example.wgsl  default_shader.wgsl  default_vertex.wgsl  fbm_noise.wgsl  kaleidoscope_advanced.wgsl  mandelbrot.wgsl  menger_sponge.wgsl  mouse_interaction.wgsl  noise.wgsl  plasma.wgsl  plasma_shadertoy_port.wgsl  random.wgsl  raymarch_spheres.wgsl  sdf_composed.wgsl  sdf_raymarch.wgsl  texture_sample_2d.wgsl  volume_3d_sample.wgsl  volumetric_clouds.wgsl  volumetric_fog.wgsl
docs/: 3D_PREVIEW_STABILIZATION_STRATEGY.md  3D_SCENE_EDITOR_INTEGRATION_GUIDE.md  3D_SCENE_EDITOR_STATUS_REPORT.md  ACCURATE_STATUS_REPORT.md  ADVANCED_FEATURES.md  APPLICATION_USAGE_GUIDE.md  APPLICATION_USAGE_GUIDE_COMPLETE.md  BRUTAL_HONEST_STATUS.md  CHANGES.md  COMPLETE_SYSTEMS_REFERENCE.md  COMPREHENSIVE_DOCUMENTATION_INDEX.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_ROADMAP.md  DOCS_MAINTENANCE.md  FEATURES_STATUS.md  FRONTEND_FEATURES.md  FRONTEND_FEATURES_IMPLEMENTED.md  GESTURE_CONTROL.md  GLSL_FUNDAMENTALS.md  GLSL_GUIDE.md  HLSL_FUNDAMENTALS.md  ISF_FUNDAMENTALS.md  MERMAID_REFERENCE_ELEGANT.md  NODE_BASED_SYSTEM_ARCHITECTURE.md  NODE_SHADER_GUIDE.md  PROJECT_GOALS.md  RELEASE_PLAN.md  SHADER_CONVERSION_FRAMEWORK.md  TECHNICAL_ARCHITECTURE_REFERENCE.md  TESTING_QUALITY_PLAN.md  UI_UX_DESIGN_GUIDE.md  VISUAL_NODE_EDITOR_COMPILATION_RESEARCH.md  VISUAL_NODE_EDITOR_INTEGRATION_GUIDE.md  WGSL_FUNDAMENTALS.md  WGSL_SHADER_STUDIO_ARCHITECTURE.md  WGSL_Shader_Studio_Complete_Feature_Implementation_PRD.md  WGSL_Shader_Studio_Feature_Implementation_PRD_CURRENT.md  WGSL_Shader_Studio_Technical_Architecture_Current.md  development_status_current.md  index.html  (+1 more)
docs/reports/2025-01-17/: BACKUP_UPDATE.md  COMPREHENSIVE_UPDATE.md  EMERGENCY_MISSING_FEATURES_AUDIT.md  FEATURES_IMPLEMENTED.md  (+1 more)
examples/: particle_physics.wgsl  wesl_demo.rs  wesl_example.wesl
isf-shaders/: 3D Lambdabulb Fractal - SDF by TheArchCoder  with texinput.fs  4D Mixpinski Fractal - SDF by TheArchCoder ith tex input.fs  4D Mixpinski Fractal Variation by TheArchCoder with tex input.fs  DMT fractality.fs  FBM clouds 2d - archcoder.fs  Fossil - Sierpinski variations by TheArchCoder  tex input.fs  Portal Eye by TheArchCoder.fs  Sticky fractal mess.fs  Uliminal complex.fs  Untitled Shader.fs  Vicsek Snowflake by archcoder with tex input.fs  abrasive.fs  alter 3d.fs  altered shapes 2.fs  altered shapes.fs  arcane explosion.fs  artist parod yextereme mod - sleepless monk.fs  astral projection 4.fs  astral projection 6.fs  astral tunnel + extra spores.fs  astral tunnel.fs  atmospheric pulse.fs  circle_generator.fs  color_waves.fs  compleat mandelbox - dr2.fs  cosmic 3d warp 1.fs  cosmic 3d warp.fs  crazy complex - sleepless monk.fs  diatribes - 6 paths large.fs  diatribes - infinite.fs  diatribes - looking back.fs  diatribes - menger mashup.fs  diatribes - metal fractal flight .fs  diatribes - wormhole soup.fs  fire lake - archcoder.fs  fractal 5d diffusion.fs  fractal insanity.fs  image fx madness.fs  image madness.fs  insane fractality - sleepless monk.fs  (+30 more)
reports/: SESSION_FUCKUPS_AND_PROGRESS_REPORT.md
scripts/: enforcement_daemon.sh  safe_coding_rules.md  safety_guard.sh  session_enforcer.sh  strict_enforcement.sh
shaders/: default.wgsl  test_compute.wgsl  test_params.wgsl
src/: 3d_scene.rs  advanced_file_io.rs  advanced_shader_compilation.rs  audio.rs  audio_midi_integration.rs  audio_new.rs  audio_panel.rs  audio_system.rs  backend_systems.rs  bevy_app.rs  bevy_app_audited.rs  bevy_app_backup_final.rs  bevy_app_fresh.rs  bevy_app_new.rs  bevy_app_new_section.rs  bevy_app_with_auditor.rs  bevy_app_with_simple_auditor.rs  bevy_node_graph_integration.rs  bevy_node_graph_integration_enhanced.rs  bevy_shader_graph_integration.rs  bevy_shader_graph_integration_new.rs  code_editor.rs  color_grading.rs  complete_integration.rs  complete_shader_studio.rs  compute_pass_integration.rs  debug_3d_panic.rs  diagnostics_panel.rs  dmx_lighting_control.rs  dmx_lighting_control_test.rs  doc_generator.rs  documentation_server.rs  editor_ui.rs  editor_ui_audited.rs  editor_ui_compile_function.rs  editor_ui_fix.rs  editor_ui_fixed.rs  editor_ui_function.rs  editor_ui_new.rs  editor_ui_original.rs  (+98 more)
src/converter/: diagnostics.rs  emitter.rs  glsl.rs  hlsl.rs  isf.rs  mod.rs  wesl.rs
test_gui/: Cargo.toml
test_gui/src/: main.rs
tests/: documentation_test.rs  isf_loader_test.rs
